--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,5 +1,5 @@
 # .github/workflows/cd.yml
-name: Continuous Deployment
+name: CD - GitHub Pages
 
 on:
   push:
@@ -11,10 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist   # Dossier du site
+          publish_dir: ./        # publier depuis la racine du repo
           publish_branch: gh-pages
           force_orphan: true
